connected legend display to menu

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Vue Example</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta http-equiv="paramtent-Type" paramtent="text/html; charset=us-ascii" />
+	<meta name='viewport' paramtent='initial-scale=1,maximum-scale=1' content='width=device-width'/>
+    <title>GAMA | Priority Basin Project Webmap</title>
   </head>
   <body>
    
